--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -17,7 +17,7 @@
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Leo"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -40,24 +40,25 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
                 android:text="Tolstoi"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
-        </LinearLayout>
 
-        <TextView
-            android:id="@+id/bookItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Anna Carenina"
-            android:textSize="16sp" />
+            <TextView
+                android:id="@+id/bookItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
+                android:text="Anna Carenina"
+                android:textSize="14sp" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/isbnItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="64646523173465727645"
-            android:textSize="16sp"
+            android:text="ISBN: 64646523173465727645"
+            android:textSize="12sp"
             android:textStyle="italic" />
-
     </LinearLayout>
 </android.support.v7.widget.CardView>
