--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -14,13 +14,13 @@
     app:cardElevation="3dp"
     app:cardUseCompatPadding="true">
 
-    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:orientation="vertical">
+        android:layout_margin="5dp">
 
         <LinearLayout
+            android:id="@+id/firstRow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -58,8 +58,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ISBN: 64646523173465727645"
+            android:layout_below="@id/firstRow"
             android:textSize="12sp"
             android:textStyle="italic" />
+
         <ImageView
             android:id="@+id/removeItemImg"
             android:layout_width="20dp"
@@ -69,6 +71,8 @@
             android:layout_marginRight="10dp"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/ic_remove_item" />
-    </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:src="@drawable/ic_remove_item"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
