--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -57,8 +57,8 @@
             android:id="@+id/isbnItem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ISBN: 64646523173465727645"
             android:layout_below="@id/firstRow"
+            android:text="ISBN: 64646523173465727645"
             android:textSize="12sp"
             android:textStyle="italic" />
 
@@ -66,13 +66,13 @@
             android:id="@+id/removeItemImg"
             android:layout_width="20dp"
             android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:layout_gravity="end"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:clickable="true"
             android:focusable="true"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_remove_item"
-            android:layout_alignParentEnd="true" />
+            android:src="@drawable/ic_remove_item" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
